--- a/app/templates/programs/wp_data.html
+++ b/app/templates/programs/wp_data.html
@@ -1,57 +1,82 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1 class="display-6">
-        {% block title %} Информация по рабочим программам учебного плана {% endblock %}
-    </h1>
+  <h1 class="display-6">
+      {% block title %} Информация по рабочим программам учебного плана {% endblock %}
+  </h1>
 
-    <div class="d-grid col-xl-8">
-    <div class="h4 mt-2 mb-4 text-white text-center bg-dark fw-normal"><b>{{ plan_name }}</b></div>
+  <div class="d-grid col-xl-8">
+    <div class="h4 mt-2 mb-4 text-white text-center bg-dark fw-normal">
+      <b>{{ plan_name }}</b>
     </div>
+  </div>
 
-    {% if wp_list %}
-    <div class="d-grid col-xl-8">
-        <table class="col-md-7 mt-3 table">
-          <tr class="table-success">
-              <td>Список созданных рабочих программ:</td>
-              <td>Согласование:</td>
-          </tr>
-
-            {% for prog in wp_list %}
-              <tr>
-                <td><span style="white-space: pre-line"><b>{{ wp_list[prog][0] }}</b></span></td>
-                <td>
-                    {% for sign in wp_list[prog][1] %}
-                    {{ sign }}
-                    {% endfor %}
-                </td>
-              </tr>
+  {% if wp_list %}
+  <div class="d-grid col-xl-8">
+    <table class="col-md-7 mt-3 table">
+      <tr class="table-success">
+        <td>Список созданных рабочих программ:</td>
+        <td>Согласование:</td>
+        <td>Утверждение:</td>
+      </tr>
+      {% for prog in wp_list %}
+        <tr>
+          <td>
+            <span style="white-space: pre-line">
+              <b>{{ wp_list[prog][0] }}</b>
+            </span>
+          </td>
+          <td>
+            {% for sign in wp_list[prog][1] %}
+              {{ sign }}
             {% endfor %}
-        </table>
-    </div>
-    {% endif %}
+          </td>
+          <td>
+            {% if wp_list[prog][2] %}
+              Утверждена
+            {% else %}
+              <b>Не утвержд.</b>
+            {% endif %}
+          </td>
+        </tr>
+      {% endfor %}
+    </table>
+  </div>
+  {% endif %}
 
-    {% if no_program %}
+  {% if no_program %}
     <div class="d-grid col-xl-8">
-        <table class="col-md-7 mt-3 table">
-          <tr class="table-warning">
-              <td>В плане отсутствуют рабочие программы:</td>
-          </tr>
-            {% for disc in no_program %}
-              <tr>
-                <td><span style="white-space: pre-line"><b>{{ no_program[disc] }}</b></span></td>
-              </tr>
-            {% endfor %}
-        </table>
+      <table class="col-md-7 mt-3 table">
+        <tr class="table-warning">
+            <td>В плане отсутствуют рабочие программы:</td>
+        </tr>
+          {% for disc in no_program %}
+            <tr>
+              <td><span style="white-space: pre-line"><b>{{ no_program[disc] }}</b></span></td>
+            </tr>
+          {% endfor %}
+      </table>
     </div>
+  {% endif %}
 
-    {% if current_user.get_id() in ['1'] %}
-        <form action="" method="post">
-            <div class="d-grid mt-3 mb-3 col-xl-8">
-                <input type="submit" name="create_wp" value="Создать отсутствующие программы" class="btn btn-success">
-            </div>
-        </form>
-    {% endif %}
-
-    {% endif %}
+  {% if current_user.get_id() in ['1'] %}
+    <form action="" method="post">
+      {% if no_program %}
+        <div class="d-grid mt-3 mb-3 col-xl-8">
+          <input type="submit"
+                 name="create_wp"
+                 value="Создать отсутствующие программы"
+                 class="btn btn-warning"
+          >
+        </div>
+      {% endif %}
+      <div class="d-grid mt-3 mb-3 col-xl-8">
+        <input type="submit"
+               name="wp_status_0"
+               value="Разутвердить все программы плана"
+               class="btn btn-primary"
+        >
+      </div>
+    </form>
+  {% endif %}
 {% endblock %}
