user roles access update

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -87,7 +87,7 @@
       </li>
 
       <!-- Учебные планы -->
-      {% if current_user.is_authenticated and current_user.get_id() in ['1', '3'] %}
+      {% if current_user.is_authenticated and current_user.role in [1, 3] %}
       <li>
         <a href="{{ url_for('plans.comp_choose_plan') }}"
            class="nav-link {% if active == 'plans' %} active text-white {% else %} text-secondary {% endif %}"
@@ -97,11 +97,11 @@
       </li>
          {% if active == "plans" %}
              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-               {% if current_user.get_id() in ['1'] %}
+               {% if current_user.role in [1] %}
                  <li><a href="{{ url_for('plans.comp_choose_plan') }}" class="text-white rounded">Загрузка компетенций</a></li>
                {% endif %}
                  <li><a href="{{ url_for('plans.matrix_simple_choose_plan') }}" class="text-white rounded">Матрица простая</a></li>
-               {% if current_user.get_id() in ['1'] %}
+               {% if current_user.role in [1] %}
                  <li><a href="{{ url_for('plans.matrix_indicator_choose_plan') }}" class="text-white rounded">Матрица c индикаторами</a></li>
                {% endif %}
                  <li><a href="{{ url_for('plans.matrix_indicator_file_upload') }}" class="text-white rounded">Индикаторы по дисциплинам</a></li>
@@ -118,15 +118,15 @@
           Программы</a>
       </li>
 
-         {% if current_user.is_authenticated and current_user.get_id() in ['1', '3'] %}
+         {% if current_user.is_authenticated and current_user.role in [1, 3] %}
            {% if active == "programs" %}
              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                  <li><a href="{{ url_for('programs.dept_check') }}" class="text-white rounded">Проверка по кафедре</a></li>
-               {% if current_user.get_id() in ['1'] %}
+               {% if current_user.role in [1] %}
                  <li><a href="{{ url_for('programs.dates_update') }}" class="text-white rounded">Обновление дат</a></li>
                {% endif %}
                  <li><a href="{{ url_for('programs.fields_choose_plan') }}" class="text-white rounded">Значения полей</a></li>
-               {% if current_user.get_id() in ['1', '3'] %}
+               {% if current_user.role in [1, 3] %}
                  <li><a href="{{ url_for('programs.wp_data_choose_plan') }}" class="text-white rounded">Общая информация</a></li>
                {% endif %}
              </ul>
@@ -134,11 +134,11 @@
          {% endif %}
 
         <!-- Обеспечение -->
-        {% if current_user.is_authenticated and current_user.get_id() in ['1', '3', '4'] %}
+        {% if current_user.is_authenticated and current_user.role in [1, 3, 4] %}
             <li>
-              <a href="{% if current_user.get_id() in ['1', '4'] %}
+              <a href="{% if current_user.role in [1, 4] %}
                          {{ url_for('library.library_choose_plan') }}
-                       {% elif current_user.get_id() in ['3'] %}
+                       {% elif current_user.role in [3] %}
                          {{ url_for('library.library_np_choose_plan') }}
                        {% endif %}"
                  class="nav-link {% if active == 'library' %} active text-white {% else %} text-secondary {% endif %}"
@@ -151,12 +151,12 @@
          {% if current_user.is_authenticated %}
             {% if active == "library" %}
              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-               {% if current_user.get_id() in ['1', '4'] %}
+               {% if current_user.role in [1, 4] %}
                  <li><a href="{{ url_for('library.library_choose_plan') }}" class="text-white rounded">Список литературы</a></li>
                  <li><a href="{{ url_for('library.library_int_choose_plan') }}" class="text-white rounded">Интернет ресурсы</a></li>
                  <li><a href="{{ url_for('library.library_db_choose_plan') }}" class="text-white rounded">Базы и справочные системы</a></li>
                {% endif %}
-               {% if current_user.get_id() in ['1', '3'] %}
+               {% if current_user.role in [1, 3] %}
                  <li><a href="{{ url_for('library.library_np_choose_plan') }}" class="text-white rounded">Научная продукция</a></li>
                {% endif %}
              </ul>
