--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -148,20 +148,20 @@
               </a>
             </li>
         {% endif %}
-         {% if current_user.is_authenticated %}
-            {% if active == "library" %}
-             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-               {% if current_user.role in [1, 4] %}
-                 <li><a href="{{ url_for('library.library_choose_plan') }}" class="text-white rounded">Список литературы</a></li>
-                 <li><a href="{{ url_for('library.library_int_choose_plan') }}" class="text-white rounded">Интернет ресурсы</a></li>
-                 <li><a href="{{ url_for('library.library_db_choose_plan') }}" class="text-white rounded">Базы и справочные системы</a></li>
-               {% endif %}
-               {% if current_user.role in [1, 3] %}
-                 <li><a href="{{ url_for('library.library_np_choose_plan') }}" class="text-white rounded">Научная продукция</a></li>
-               {% endif %}
-             </ul>
-           {% endif %}
-         {% endif %}
+        {% if current_user.is_authenticated %}
+          {% if active == "library" %}
+            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+              {% if current_user.role in [1, 4] %}
+                <li><a href="{{ url_for('library.library_choose_plan') }}" class="text-white rounded">Список литературы</a></li>
+                <li><a href="{{ url_for('library.library_int_choose_plan') }}" class="text-white rounded">Интернет ресурсы</a></li>
+                <li><a href="{{ url_for('library.library_db_choose_plan') }}" class="text-white rounded">Базы и справочные системы</a></li>
+              {% endif %}
+              {% if current_user.role in [1, 3] %}
+                <li><a href="{{ url_for('library.library_np_choose_plan') }}" class="text-white rounded">Научная продукция</a></li>
+              {% endif %}
+            </ul>
+          {% endif %}
+        {% endif %}
     </ul>
 
     <hr>
@@ -191,24 +191,23 @@
 
   <div class="b-divider"></div>
 
-    <div class="container-fluid mt-4 overflow-scroll">
-      {% block content %} {% endblock %}
-
-      {% with messages = get_flashed_messages() %}
-          {% if messages %}
-              <div class="row mb-3 gy-3">
-                  <div class="d-grid col-xl-8 text-center">
-                      {% for message in messages %}
-                          <div class="alert alert-info" role="alert">
-                            {{ message }}
-                          </div>
-                      {% endfor %}
-                  </div>
+  <div class="container-fluid mt-4 overflow-scroll">
+    {% block content %}
+    {% endblock %}
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <div class="row mb-3 gy-3">
+          <div class="d-grid col-xl-8 text-center">
+            {% for message in messages %}
+              <div class="alert alert-info" role="alert">
+                {{ message }}
               </div>
-          {% endif %}
-      {% endwith %}
-
-    </div>
+            {% endfor %}
+          </div>
+        </div>
+      {% endif %}
+    {% endwith %}
+  </div>
 
 
 
