--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,6 +48,9 @@
       <symbol id="book" viewBox="0 0 16 16">
         <path d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811V2.828zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"/>
       </symbol>
+      <symbol id="admin" viewBox="0 0 16 16">
+        <path d="M.102 2.223A3.004 3.004 0 0 0 3.78 5.897l6.341 6.252A3.003 3.003 0 0 0 13 16a3 3 0 1 0-.851-5.878L5.897 3.781A3.004 3.004 0 0 0 2.223.1l2.141 2.142L4 4l-1.757.364L.102 2.223zm13.37 9.019.528.026.287.445.445.287.026.529L15 13l-.242.471-.026.529-.445.287-.287.445-.529.026L13 15l-.471-.242-.529-.026-.287-.445-.445-.287-.026-.529L11 13l.242-.471.026-.529.445-.287.287-.445.529-.026L13 11l.471.242z"/>
+      </symbol>
   </svg>
 
 <main>
@@ -162,7 +165,31 @@
             </ul>
           {% endif %}
         {% endif %}
+
+       <!-- Администрирование -->
+      {% if current_user.is_authenticated and current_user.role in [1] %}
+        <li>
+          <a href="{{ url_for('auth.register') }}"
+             class="nav-link {% if active == 'admin' %} active text-white {% else %} text-secondary {% endif %}"
+             aria-current="page">
+            <svg class="bi me-2" width="16" height="16"><use xlink:href="#admin"/></svg>
+            Пользователи</a>
+        </li>
+      {% endif %}
+      {% if current_user.is_authenticated %}
+          {% if active == "admin" %}
+            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+              {% if current_user.role in [1] %}
+                <li><a href="{{ url_for('auth.register') }}" class="text-white rounded">Регистрация</a></li>
+                <li><a href="{{ url_for('admin.index') + 'user' }}" class="text-white rounded">Управление</a></li>
+              {% endif %}
+            </ul>
+          {% endif %}
+        {% endif %}
+
     </ul>
+
+
 
     <hr>
 
