--- a/app/templates/programs/dates_update.html
+++ b/app/templates/programs/dates_update.html
@@ -1,93 +1,98 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1 class="display-6" xmlns="http://www.w3.org/1999/html">{% block title %} Обновление информации об утверждении программ {% endblock %}</h1>
-    <p></p>
+<h1 class="display-6" xmlns="http://www.w3.org/1999/html">
+  {% block title %}
+    Обновление информации об утверждении программ
+  {% endblock %}
+</h1>
+<p></p>
 
 <form action="" method="post" novalidate>
-    {{ form.hidden_tag() }}
-
-    <div class="row mb-3 gy-3">
-      <div class="col-xl-8">
-        <label class="form-label">{{ form.edu_spec.label }}</label>
-        {{ form.edu_spec (class="form-select form-select-ld") }}
-      </div>
-      <div>
-        <input type="submit" name="spec_choose" value="Выбор" class="btn btn-secondary">
-      </div>
+  {{ form.hidden_tag() }}
+  <div class="row mb-3 gy-3">
+    <div class="col-xl-8">
+      <label class="form-label">{{ form.edu_spec.label }}</label>
+      {{ form.edu_spec (class="form-select form-select-ld") }}
     </div>
+    <div>
+      <input type="submit" name="spec_choose" value="Выбор" class="btn btn-secondary">
+    </div>
+  </div>
 
-    {% if edu_spec %}
-        <div class="row mb-3 gy-3">
+  {% if edu_spec %}
+    <div class="row mb-3 gy-3">
       <div class="col-xl-8">
         <label class="form-label">{{ form.edu_plan.label }}</label>
         {{ form.edu_plan(class="form-select form-select-ld") }}
       </div>
     </div>
-                <div class="row mb-2 gy-2">
-              <div class="col-md-7">
-                {{ form.date_methodical (placeholder="ГГГГ-ММ-ДД") }}
-              <label class="form-label">{{ form.date_methodical.label }}</label>
-              </div>
-                  {% for err in form.date_methodical.errors %}
-                    <span style="color: #ff4f1f">{{ err }}</span>
-                  {% endfor %}
-              <div class="col-md-7">
-                {{ form.document_methodical (placeholder="1") }}
-                <label class="form-label">{{ form.document_methodical.label }}</label>
-              </div>
-                  {% for err in form.document_methodical.errors %}
-                    <span style="color: #ff4f1f">{{ err }}</span>
-                  {% endfor %}
-              <div class="col-md-7">
-                {{ form.date_academic (placeholder="ГГГГ-ММ-ДД")  }}
-                <label class="form-label">{{ form.date_academic.label }}</label>
-              </div>
-                  {% for err in form.date_academic.errors %}
-                    <span style="color: #ff4f1f">{{ err }}</span>
-                  {% endfor %}
-              <div class="col-md-7">
-                {{ form.document_academic (placeholder="1") }}
-                <label class="form-label">{{ form.document_academic.label }}</label>
-              </div>
-                  {% for err in form.document_academic.errors %}
-                    <span style="color: #ff4f1f">{{ err }}</span>
-                  {% endfor %}
-              <div class="col-md-7">
-                {{ form.date_approval (placeholder="ГГГГ-ММ-ДД") }}
-                <label class="form-label">{{ form.date_approval.label }}</label>
-              </div>
-                  {% for err in form.date_approval.errors %}
-                    <span style="color: #ff4f1f">{{ err }}</span>
-                  {% endfor %}
-                    </div>
+    <div class="row mb-2 gy-2">
+      <div class="col-md-7">
+        {{ form.date_methodical (placeholder="ГГГГ-ММ-ДД") }}
+      <label class="form-label">{{ form.date_methodical.label }}</label>
+      </div>
+        {% for err in form.date_methodical.errors %}
+          <span style="color: #ff4f1f">{{ err }}</span>
+        {% endfor %}
+      <div class="col-md-7">
+        {{ form.document_methodical (placeholder="1") }}
+        <label class="form-label">{{ form.document_methodical.label }}</label>
+      </div>
+        {% for err in form.document_methodical.errors %}
+          <span style="color: #ff4f1f">{{ err }}</span>
+        {% endfor %}
+      <div class="col-md-7">
+        {{ form.date_academic (placeholder="ГГГГ-ММ-ДД")  }}
+        <label class="form-label">{{ form.date_academic.label }}</label>
+      </div>
+        {% for err in form.date_academic.errors %}
+          <span style="color: #ff4f1f">{{ err }}</span>
+        {% endfor %}
+      <div class="col-md-7">
+        {{ form.document_academic (placeholder="1") }}
+        <label class="form-label">{{ form.document_academic.label }}</label>
+      </div>
+        {% for err in form.document_academic.errors %}
+          <span style="color: #ff4f1f">{{ err }}</span>
+        {% endfor %}
+      <div class="col-md-7">
+        {{ form.date_approval (placeholder="ГГГГ-ММ-ДД") }}
+        <label class="form-label">{{ form.date_approval.label }}</label>
+      </div>
+        {% for err in form.date_approval.errors %}
+          <span style="color: #ff4f1f">{{ err }}</span>
+        {% endfor %}
+    </div>
     {{ form.wp_dates_update (class="btn btn-secondary mb-2") }}
-
-<!--    <input type="submit" name="wp_update" value="Обновить данные" class="btn btn-secondary mb-2">-->
-    {% endif %}
+  {% endif %}
 </form>
-    {% if results %}
-    <div class="row">
-        <div class="d-grid col-md-7">
-            <div class="alert alert-success" role="alert">
-                <p>Обновлены:</p>
-                <p>{% for program in results %}
-                       {{ program }}<br>
-                   {% endfor %}</p>
-            </div>
-        </div>
+{% if results %}
+  <div class="row">
+    <div class="d-grid col-md-7">
+      <div class="alert alert-success" role="alert">
+        <p>Обновлены:</p>
+        <p>
+          {% for program in results %}
+            {{ program }}<br>
+          {% endfor %}
+        </p>
+      </div>
     </div>
-    {% endif %}
-    {% if non_exist %}
-    <div class="row">
-        <div class="d-grid col-md-7">
-            <div class="alert alert-warning" role="alert">
-                <p>Не существуют:</p>
-                <p>{% for program in non_exist %}
-                       {{ non_exist[program][0] }} {{ non_exist[program][1] }}<br>
-                   {% endfor %}</p>
-            </div>
-        </div>
+  </div>
+  {% endif %}
+  {% if non_exist %}
+  <div class="row">
+    <div class="d-grid col-md-7">
+      <div class="alert alert-warning" role="alert">
+        <p>Не существуют:</p>
+        <p>
+          {% for program in non_exist %}
+            {{ non_exist[program][0] }} {{ non_exist[program][1] }}<br>
+          {% endfor %}
+        </p>
+      </div>
     </div>
-    {% endif %}
+  </div>
+{% endif %}
 {% endblock %}
