--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1 class="display-6">{% block title %} Расширения базовых функций Апекс-ВУЗ{% endblock %}</h1>
+<h1 class="display-6">
+  {% block title %}
+    Расширения базовых функций Апекс-ВУЗ
+  {% endblock %}
+</h1>
 <p class="lead">
   Дополнительные модули, взаимодействующие с системой посредством REST API<br>
   <br>
