--- a/app/templates/programs/wp_data.html
+++ b/app/templates/programs/wp_data.html
@@ -57,9 +57,9 @@
     </div>
   {% endif %}
 
-  {% if current_user.role in [1] %}
+  {% if current_user.role in [1, 3] %}
     <form action="" method="post">
-      {% if no_program %}
+      {% if no_program and current_user.role in [1] %}
         <div class="d-grid mt-3 mb-3 col-xl-8">
           <input type="submit"
                  name="create_wp"
