--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Apeks-VUZ extensions">
     <!-- Bootstrap CSS -->
-    <link href="{{url_for('static', filename='bootstrap5/css/bootstrap.min.css')}}" rel="stylesheet">
-    <link href="{{url_for('static', filename='css/sidebars.css')}}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='bootstrap5/css/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/sidebars.css') }}" rel="stylesheet">
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="{{url_for('static', filename='favicons/apple-touch-icon.png')}}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{url_for('static', filename='favicons/favicon-32x32.png')}}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{url_for('static', filename='favicons/favicon-16x16.png')}}">
-    <link rel="manifest" href="{{url_for('static', filename='favicons/site.webmanifest')}}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='favicons/apple-touch-icon.png') }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicons/favicon-32x32.png') }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='favicons/favicon-16x16.png') }}">
+    <link rel="manifest" href="{{ url_for('static', filename='favicons/site.webmanifest') }}">
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
@@ -47,6 +47,10 @@
       <symbol id="admin" viewBox="0 0 16 16">
         <path d="M.102 2.223A3.004 3.004 0 0 0 3.78 5.897l6.341 6.252A3.003 3.003 0 0 0 13 16a3 3 0 1 0-.851-5.878L5.897 3.781A3.004 3.004 0 0 0 2.223.1l2.141 2.142L4 4l-1.757.364L.102 2.223zm13.37 9.019.528.026.287.445.445.287.026.529L15 13l-.242.471-.026.529-.445.287-.287.445-.529.026L13 15l-.471-.242-.529-.026-.287-.445-.445-.287-.026-.529L11 13l.242-.471.026-.529.445-.287.287-.445.529-.026L13 11l.471.242z"/>
       </symbol>
+      <symbol id="open" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M6.364 13.5a.5.5 0 0 0 .5.5H13.5a1.5 1.5 0 0 0 1.5-1.5v-10A1.5 1.5 0 0 0 13.5 1h-10A1.5 1.5 0 0 0 2 2.5v6.636a.5.5 0 1 0 1 0V2.5a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 .5.5v10a.5.5 0 0 1-.5.5H6.864a.5.5 0 0 0-.5.5z"/>
+        <path fill-rule="evenodd" d="M11 5.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793l-8.147 8.146a.5.5 0 0 0 .708.708L10 6.707V10.5a.5.5 0 0 0 1 0v-5z"/>
+      </symbol>
     </svg>
     <main>
       <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 280px;">
@@ -65,7 +69,7 @@
              Главная</a>
           </li>
           <!-- Администрирование -->
-          {% if current_user.is_authenticated and current_user.role in [1] %}
+          {% if current_user.is_authenticated and current_user.role in [config.ROLE_ADMIN] %}
             <li>
               <a href="{{ url_for('auth.register') }}"
                  class="nav-link {% if active == 'admin' %} active text-white {% else %} text-secondary {% endif %}"
@@ -77,7 +81,7 @@
           {% if current_user.is_authenticated %}
             {% if active == "admin" %}
               <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                {% if current_user.role in [1] %}
+                {% if current_user.role in [config.ROLE_ADMIN] %}
                   <li><a href="{{ url_for('auth.register') }}" class="text-white rounded">Регистрация</a></li>
                   <li><a href="{{ url_for('admin.index') + 'user' }}" class="text-white rounded">Управление</a></li>
                 {% endif %}
@@ -101,7 +105,7 @@
              Отчет о нагрузке</a>
           </li>
           <!-- Учебные планы -->
-          {% if current_user.is_authenticated and current_user.role in [1, 3] %}
+          {% if current_user.is_authenticated and current_user.role in [config.ROLE_ADMIN, config.ROLE_METOD] %}
           <li>
             <a href="{{ url_for('plans.comp_choose_plan') }}"
                class="nav-link {% if active == 'plans' %} active text-white {% else %} text-secondary {% endif %}"
@@ -111,11 +115,11 @@
           </li>
             {% if active == "plans" %}
               <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                {% if current_user.role in [1] %}
+                {% if current_user.role in [config.ROLE_ADMIN] %}
                   <li><a href="{{ url_for('plans.comp_choose_plan') }}" class="text-white rounded">Загрузка компетенций</a></li>
                 {% endif %}
                   <li><a href="{{ url_for('plans.matrix_simple_choose_plan') }}" class="text-white rounded">Матрица простая</a></li>
-                {% if current_user.role in [1] %}
+                {% if current_user.role in [config.ROLE_ADMIN] %}
                   <li><a href="{{ url_for('plans.matrix_indicator_choose_plan') }}" class="text-white rounded">Матрица c индикаторами</a></li>
                 {% endif %}
                   <li><a href="{{ url_for('plans.matrix_indicator_file_upload') }}" class="text-white rounded">Индикаторы по дисциплинам</a></li>
@@ -130,26 +134,26 @@
               <svg class="bi me-2" width="16" height="16"><use xlink:href="#programs"/></svg>
               Программы</a>
           </li>
-            {% if current_user.is_authenticated and current_user.role in [1, 3] %}
+            {% if current_user.is_authenticated and current_user.role in [config.ROLE_ADMIN, config.ROLE_METOD] %}
               {% if active == "programs" %}
                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                     <li><a href="{{ url_for('programs.dept_check') }}" class="text-white rounded">Проверка по кафедре</a></li>
-                  {% if current_user.role in [1] %}
+                  {% if current_user.role in [config.ROLE_ADMIN] %}
                     <li><a href="{{ url_for('programs.dates_update') }}" class="text-white rounded">Обновление дат</a></li>
                   {% endif %}
                     <li><a href="{{ url_for('programs.fields_choose_plan') }}" class="text-white rounded">Значения полей</a></li>
-                  {% if current_user.role in [1, 3] %}
+                  {% if current_user.role in [config.ROLE_ADMIN, config.ROLE_METOD] %}
                     <li><a href="{{ url_for('programs.wp_data_choose_plan') }}" class="text-white rounded">Общая информация</a></li>
                   {% endif %}
                 </ul>
               {% endif %}
             {% endif %}
             <!-- Обеспечение -->
-            {% if current_user.is_authenticated and current_user.role in [1, 3, 4] %}
+            {% if current_user.is_authenticated and current_user.role in [config.ROLE_ADMIN, config.ROLE_METOD, config.ROLE_BIBL] %}
               <li>
-                <a href="{% if current_user.role in [1, 4] %}
+                <a href="{% if current_user.role in [config.ROLE_ADMIN, config.ROLE_BIBL] %}
                            {{ url_for('library.library_choose_plan') }}
-                         {% elif current_user.role in [3] %}
+                         {% elif current_user.role in [config.ROLE_METOD] %}
                            {{ url_for('library.library_np_choose_plan') }}
                          {% endif %}"
                    class="nav-link {% if active == 'library' %} active text-white {% else %} text-secondary {% endif %}"
@@ -162,12 +166,12 @@
             {% if current_user.is_authenticated %}
               {% if active == "library" %}
                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                  {% if current_user.role in [1, 4] %}
+                  {% if current_user.role in [config.ROLE_ADMIN, config.ROLE_BIBL] %}
                     <li><a href="{{ url_for('library.library_choose_plan') }}" class="text-white rounded">Список литературы</a></li>
                     <li><a href="{{ url_for('library.library_int_choose_plan') }}" class="text-white rounded">Интернет ресурсы</a></li>
                     <li><a href="{{ url_for('library.library_db_choose_plan') }}" class="text-white rounded">Базы и справочные системы</a></li>
                   {% endif %}
-                  {% if current_user.role in [1, 3] %}
+                  {% if current_user.role in [config.ROLE_ADMIN, config.ROLE_METOD] %}
                     <li><a href="{{ url_for('library.library_np_choose_plan') }}" class="text-white rounded">Научная продукция</a></li>
                   {% endif %}
                 </ul>
@@ -180,7 +184,7 @@
         {% if current_user.is_anonymous %}
           <div>
             <a href="{{ url_for('auth.login') }}" class="d-flex align-items-center text-white text-decoration-none">
-              <img src="{{url_for('static', filename='images/login.png')}}" alt="" width="32" height="32" class="rounded-circle me-2">
+              <img src="{{ url_for('static', filename='images/login.png') }}" alt="" width="32" height="32" class="rounded-circle me-2">
               <strong>Войти</strong>
             </a>
           </div>
@@ -189,7 +193,7 @@
         {% if current_user.is_authenticated %}
           <div class="dropdown">
             <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="user" data-bs-toggle="dropdown" aria-expanded="false">
-              <img src="{{url_for('static', filename='images/auth.png')}}" alt="" width="32" height="32" class="rounded-circle me-2">
+              <img src="{{ url_for('static', filename='images/auth.png') }}" alt="" width="32" height="32" class="rounded-circle me-2">
               <strong>{{ current_user }}</strong>
               </a>
               <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="user">
@@ -220,6 +224,6 @@
       </div>
     </main>
     <!-- Optional JavaScript -->
-    <script src="{{url_for('static', filename='bootstrap5/js/bootstrap.bundle.min.js')}}"></script>
+    <script src="{{ url_for('static', filename='bootstrap5/js/bootstrap.bundle.min.js') }}"></script>
   </body>
 </html>
