--- a/app/templates/programs/dept_check.html
+++ b/app/templates/programs/dept_check.html
@@ -50,8 +50,8 @@
           <tr class="table-success">
             <td>
               <span style="white-space: pre-line">{{ wp }}</span>
-              {% if wp_data[plan][wp][0] != "-->Программа отсутствует<--" and current_user.role in [1] %}
-                <a href="{{url_for('programs.wp_field_edit')}}?disc_id={{ wp_data[plan][wp][1] }}&parameter={{ wp_field }}"
+              {% if wp_data[plan][wp][0] != "-->Программа отсутствует<--" and current_user.role in [config.ROLE_ADMIN] %}
+                <a href="{{ url_for('programs.wp_field_edit') }}?disc_id={{ wp_data[plan][wp][1] }}&parameter={{ wp_field }}"
                    target="_blank"
                    class="btn btn-success btn-block p-0"
                    role="button">Edit</a>
